--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Reset */
-*{
+* {
   padding: 0;
   margin: 0;  
   font-family: 'Roboto', sans-serif;
@@ -23,7 +23,6 @@
 }
 
 /* Containers */
-
 #container {
     display: flex;
     flex-direction: row;
@@ -33,7 +32,7 @@
 #bio-container {
     flex: 1 1 20%;
     min-height: 100vh;
-    background-color: var(--bio-border-color);
+    background-color: var(--bio-bg-color);
     text-align: center;
     padding: 30px 12px;
     border-right: 5px solid var(--bio-border-color);
@@ -46,22 +45,17 @@
     padding: 50px;
 }
 
-bio-container img {
-  width: 150px;
-  height: 150px;  
-}
-
 /* Bio container */
 #bio-container h2 {
     margin-bottom: 25px;
 }
 
-#bio-container #welcome-text {
-    font-weight: bold;
+#bio-container p {
+  margin-bottom: 20px;
 }
 
-#bio-container p {
-    margin-bottom: 20px;
+#bio-container #welcome-text {
+    font-weight: bold;
 }
 
 #bio-image  {
@@ -69,7 +63,7 @@ bio-container img {
     height: 175px;
     border-radius: 50%; 
     margin-bottom: 25px; 
-  }
+}
 
   #social-container {
     display: flex;
@@ -78,57 +72,57 @@ bio-container img {
     border-bottom: 1px solid var(--border-color);
     margin-bottom: 25px;
     padding-bottom: 25px;
-  }
+}
 
   #social-container li {
     flex: 1 1 0;
     max-width: 60px;
-  }
+}
 
   #social-container li a {
     color: var(--main-color);
     font-size: 30px;
-  }
+}
 
   #email-container {
     display: flex;
     justify-content: center;
-  }
+}
 
   #email-container ion-icon,
   #email-container a {
     flex: 1 1 0;
-  }
+}
 
   #email-container a {
     color: var(--main-text-color);
     text-decoration: none;
     max-width: 225px;
-  }
+}
 
   #email-container ion-icon {
     color: var(--main-color);
     font-size: 20px;
     margin-right: 5px; 
     max-width: 20px;
-  } 
+} 
 
   /* About container */
   #name {
     font-size: 42px;
     margin-bottom: 15px;
-  }
+}
 
-  #tittle {
+  #title {
     font-size: 24px;
     margin-bottom: 15px;
     font-weight: bold;
-  }
+}
   
   .description {
     max-width: 75%;
     margin-bottom: 10px;
-  }
+}
 
   #btn-projects {
     font-weight: bold;
@@ -144,41 +138,40 @@ bio-container img {
     width: 150px;
     text-align: center;
     display: flex;
-    
-  }
-
+} 
+  
   #btn-projects ion-icon,
   #btn-projects span {
     flex: 1 1 0;
-  }
+}
 
   #btn-projects ion-icon {
     font-size: 20px;
     max-width: 20px;
-  }
+}
 
   #btn-projects:hover {
     background-color: transparent;
-  }
+}
 
-  #skills-sextion-tittle {
+  #skills-section-title {
     border-top: 1px solid var(--border-color);
     padding-top: 20px;
     margin-top: 20px;
     font-size: 32px;
-  }
+}
 
-  skills-container {
+  #skills-container {
     display: flex;
     flex-wrap: wrap;
     margin-top: 25px;
-  }
+}
 
   .skills-box {
     flex: 1 1 33%;
     max-width: 33%;
     margin-bottom: 35px;
-  }
+}
 
   .skills-title {
     font-size: 24px;
@@ -186,18 +179,17 @@ bio-container img {
     font-weight: bold;
     padding-left: 10px;
     border-left: 5px solid var(--main-color);
-  }
+}
 
   .skills-box i {
     font-size: 45px;
     margin-right: 10px;
-  }
+}
 
   /* Mobile */
   @media(max-width: 450px) {
 
     #container {
-
       flex-direction: column;
     }
 
@@ -211,7 +203,7 @@ bio-container img {
       display: none;
     }
 
-    #bi0-container p {
+    #bio-container p {
       max-width: 60%;
       margin: 10px auto;
     }
@@ -242,5 +234,5 @@ bio-container img {
       font-size: 60px;
     }
 
-  }
+}
     
